<resources>
    <string name="app_name">MyForum</string>
    <string name="login">Login</string>
    <string name="pwd">Password</string>
    <string name="btnConnect">Connect</string>
    <string name="ErrorMessage">you have not entered all the necessary information</string>
    <string name="Register">Register</string>
    <string name="Home">Home</string>
    <string name="city">Choose a city</string>
    <string name="btnregister">Register</string>
    <string name="loginName">Login</string>
    <string name="pwd1">Password</string>
    <string name="pwd2">confirm your password</string>
    <string name="tvcity">City</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="loginEmpty">You do not have filled user field !</string>
    <string name="pwd1Empty">You do not have filled the password field !</string>
    <string name="cityEmpty">You do not have chosen any city !</string>
    <string name="genderEmpty">You do not have chosen the sex !</string>
    <string name="topicCreate">New Topic</string>
    <string name="hintTopic">Title of topic</string>
    <string name="existingTopic">Existing topics</string>
    <string name="pwdnotthesame">passwords are not the same</string>
    <string name="emptylistcity">List is empty</string>
    <string name="code_2">Unable to contact the server</string>
    <string name="code_1">" Please contact support"</string>
    <string name="pwd1toshort">Password is to short</string>
    <string name="code_101">login error, please contact support</string>
    <string name="code_102">Password error, please contact support</string>
    <string name="code_103">gender error, please contact support</string>
    <string name="code_104">city error, please contact support</string>
    <string name="user_created">User created</string>
    <string name="code_105">user name is already taken</string>
    <string name="wrongpwd">"the password entered is not correct "</string>
    <string name="wrongloginname">the login name entered is not correct</string>
    <string name="welcomeUser">"Welcome "</string>
    <string name="ErrorMessageloginpwd">" you have not entered all the necessary information"</string>
    <string name="btnNewT">Create new topic</string>
    <string name="titleoftopic">Title of topic</string>
    <string name="code_3">the request to the server could not succeed, please contact support</string>
    <string name="emptylisttopic">The list of topic is empty</string>
    <string name="requesterror">error request, please contact the support</string>
    <string name="BtnnewMessage">Post a new message</string>
    <string name="tv_NewMessage">Write here your message</string>
    <string name="tv_listMessage">Existing message</string>
    <string name="topicTitle">Topics</string>
    <string name="cityTitle">City list</string>
    <string name="registerTitle">Register</string>
    <string name="newTopicTitle">New topic</string>
    <string name="messageTitle">Post</string>
    <string name="wronglogin">Incorrect login or password</string>
    <string name="newpostempty">field message is empty</string>
    <string name="errorP">Error  params, please contact support</string>
    <string name="errorRequest">request error, please contact the support.</string>
    <string name="postCreated">post created</string>
    <string name="PostWritter">"Post by "</string>
    <string name="emptylistPost">list of message is empty</string>
    <string name="code_2000">Topic already exist</string>
</resources>