<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_linearl">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginName"
           style="@style/textAppStyle"/>
        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd1"
            style="@style/textAppStyle"/>
        <EditText
            android:id="@+id/et_pwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pwd2"
            style="@style/textAppStyle"/>
        <EditText
            android:id="@+id/et_pwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"/>
        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvcity"
            style="@style/textAppStyle"/>

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/editTextStyle"/>

        <Button
            android:id="@+id/btn_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnregister"/>
    </LinearLayout>
</ScrollView>