<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="the salt forum"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/login"
            android:background="@color/white"
            android:textColorHint="@color/colorText_hint"/>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pwd"
            android:background="@color/white"
            android:textColorHint="@color/colorText_hint"/>
        <Button
            android:id="@+id/btn_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btnConnect"
            style="@style/buttonStyle"
            />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/textColor_btn"
            android:layout_marginTop="20dp"
            android:background="@color/background_btn"
            style="@style/buttonStyle"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/errorMessage"
                />

            <ImageView
                android:id="@+id/image"
                android:layout_width="400sp"
                android:layout_height="300sp"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:src="@drawable/forum"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>